--- a/contactus.html
+++ b/contactus.html
@@ -75,10 +75,10 @@
 <hr>
 
 <div id="menuBar">
-	<div id="menu"><a id="link" href="/web project/index.html">Home</a></div>
-	<div id="menu"><a id="link" href="/web project/careers.html">Careers</a></div>
-	<div id="menu"><a id="link" href="/web project/aboutus.html">About</a></div>
-	<div id="menu"><a id="link" href="contactus.html">Contact</a></div>
+	<div id="menu"><a id="link" href="./index.html">Home</a></div>
+	<div id="menu"><a id="link" href="./careers.html">Careers</a></div>
+	<div id="menu"><a id="link" href="./aboutus.html">About</a></div>
+	<div id="menu"><a id="link" href="">Contact</a></div>
 </div>
 <hr>
 <div id="content">
