--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <hr>
 
 <div id="menuBar">
-	<div><a href="./index.html">Home</a></div>
+	<div><a href="">Home</a></div>
 	<div><a href="./careers.html">Careers</a></div>
 	<div><a href="./aboutus.html">About</a></div>
 	<div><a href="./contactus.html">Contact</a></div>
