--- a/dayFinder.html
+++ b/dayFinder.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Homepage</title>
+	<title>FindDay Game</title>
 	<style type="text/css">
 		#mainContainer {
                           width: 100%;
@@ -88,9 +88,7 @@
   <input type="text" id="textONE" placeholder="Enter date in yyyy-mm-dd" /><br><br>
   <button class="onc" onclick="getDay()">Submit</button><br><br>
   <div id="spanResult">
-<!--<input type="text" id="dateStr" placeholder="Enter date in dd-mm-yyyy" /><br><br>
-<button class="onc" onclick="testVariable()">Submit</button><br><br>
-<div id="spanResult">-->
+
 
 </div>
 
