--- a/contactus.html
+++ b/contactus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Homepage</title>
+	<title>Contact Us</title>
 	<style type="text/css">
 		#mainContainer {
                           width: 100%;
