--- a/program.html
+++ b/program.html
@@ -73,7 +73,7 @@
        <ol>
        	   <li><a href="./dayFinder.html">Find day of the given date</a></li><br>
        	   <li><a href="./generatePattern.html">Pattern Generator code</a></li><br>
-       		<li><a href="./neon.html">Check neon number</a></li><br>
+       		<li><a href="neon.html">Check neon number</a></li><br>
        </ol>
        </div>
        
