modify location and code
add some new feature and modify location

--- a/dayFinder.html
+++ b/dayFinder.html
@@ -78,7 +78,7 @@
 	<div id="menu"><a id="link" href="./index.html">Home</a></div>
 	<div id="menu"><a id="link" href="./careers.html">Careers</a></div>
 	<div id="menu"><a id="link" href="./aboutus.html">About</a></div>
-	<div id="menu"><a id="link" href="">Contact</a></div>
+	<div id="menu"><a id="link" href="./contactus.html">Contact</a></div>
 </div>
 <hr>
 <div id="content">
