--- a/aboutus.html
+++ b/aboutus.html
@@ -70,7 +70,7 @@
 <div id="menuBar">
 	<div id="menu"><a id="link" href="./index.html">Home</a></div>
 	<div id="menu"><a id="link" href="./careers.html">Careers</a></div>
-	<div id="menu"><a id="link" href="">About</a></div>
+	<div id="menu"><a id="link" href="#">About</a></div>
 	<div id="menu"><a id="link" href="./contactus.html">Contact</a></div>
 </div>
 <hr>
