code and location modified
replace index page code and added one extra page

--- a/dayFinder.html
+++ b/dayFinder.html
@@ -75,7 +75,7 @@
 <hr>
 
 <div id="menuBar">
-	<div id="menu"><a id="link" href="./index.html">Home</a></div>
+	<div id="menu"><a id="link" href="./homepage.html">Home</a></div>
 	<div id="menu"><a id="link" href="./careers.html">Careers</a></div>
 	<div id="menu"><a id="link" href="./aboutus.html">About</a></div>
 	<div id="menu"><a id="link" href="./contactus.html">Contact</a></div>
