--- a/generatePattern.html
+++ b/generatePattern.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Chech neon</title>
+	<title>Generate Pattern</title>
 	<style type="text/css">
 		#mainContainer {
                           width: 100%;
@@ -59,11 +59,13 @@
 		  h1,p{color: white; font-size: 1.5rem;}
 
 
-		  #spanResult { width: 200px; height: 100px; background: lightblue; color: black;  font-size: 1.5rem; margin-left: 40%;}
-		  #spanResult1 { width: 200px; height: 100px; background: lightblue; color: black;  font-size: 1.5rem; margin-left: 40%;}
+		  #spanResult { width: 300px; height: 200px; background: lightblue; color: black;  font-size: 1.5rem; margin-left: 40%;}
+		  #spanResult1 { width: 300px; height: 200px; background: lightblue; color: black;  font-size: 1.5rem; margin-left: 40%;}
 		#textONE { border-width: 33%; height: 30px; background: lightcyan; text-align: center; }
 		#textTWO { border-width: 33%; height: 30px; background: lightcyan;  text-align: center;}
 		.onc { width: 120px; height: 25px; background: green; color: white;  }
+		#focus-text{color:green;}
+
 
 	</style>
 </head>
@@ -75,7 +77,7 @@
 <hr>
 
 <div id="menuBar">
-	<div id="menu"><a id="link" href="./index.html">Home</a></div>
+	<div id="menu"><a id="link" href="./homepage.html">Home</a></div>
 	<div id="menu"><a id="link" href="./careers.html">Careers</a></div>
 	<div id="menu"><a id="link" href="./aboutus.html">About</a></div>
 	<div id="menu"><a id="link" href="./contactus.html">Contact</a></div>
@@ -116,7 +118,7 @@ function pattern(){
                                string += "\n"; 
                              }
                     console.log(string);
-                    document.getElementById("spanResult").textContent="\n"+string;
+                    document.getElementById("spanResult").innerText="\n"+string;
                     str1=string;
                   }
 
@@ -125,6 +127,9 @@ function changeColor(){
 	                    //document.getElementById("textONE").style.color = 'blue';
 	                    var str = new String(str1);
                         document.write(str.fontcolor( "blue" ));
+                        //document.getElementById("focus-text").innerText="\n"+str;
+                        //document.body.style.color="green";
+                       
                         //str.fontcolor( "blue" );
                        // document.getElementById("spanResult").textContent=str;
 	}
