--- a/careers.html
+++ b/careers.html
@@ -63,8 +63,8 @@
 <hr>
 
 <div id="menuBar">
-	<div id="menu"><a id="link" href="./index.html">Home</a></div>
-	<div id="menu"><a id="link" href="">Careers</a></div>
+	<div id="menu"><a id="link" href="./homepage.html">Home</a></div>
+	<div id="menu"><a id="link" href="#">Careers</a></div>
 	<div id="menu"><a id="link" href="./aboutus.html">About</a></div>
 	<div id="menu"><a id="link" href="./contactus.html">Contact</a></div>
 </div>
