--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 			    console.log(strText);
 			    console.log(password);
 			    console.log(strText1);
-			   window.location="./index1.html";
+			   window.location="./homepage.html";
 				
 		}
 
